<resources>
    <string name="app_name">Modulo 335j</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Modulo 335 - Java</string>
    <string name="nav_header_subtitle">Development of Mobile Application for Android</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_toast">Toast</string>
    <string name="menu_base_views">Base Views</string>
    <string name="menu_tool_bar">Tool Bar</string>
    <string name="menu_spinner">Spinner</string>
    <string name="menu_dialog">Dialog</string>
    <string name="menu_start_activity_for_result">Start Activity for Result</string>
    <string name="menu_save_data_props">Save Data Props</string>
    <string name="menu_save_data_files">Save Data Files</string>
    <string name="menu_save_data_db">Save Data DB</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_base_elements">Base Views\nElements</string>
    <string name="menu_base_tools">Base Tools</string>
    <string name="menu_layouts">Layouts</string>
    <string name="menu_data">Data</string>
    <string name="menu_user_interfaces">User Interfaces</string>
</resources>
