<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/righteous"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/splashTitleColor"
                android:textSize="@dimen/fragment_title" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text"
                android:alignmentMode="alignMargins"
                android:background="@android:color/darker_gray"
                android:columnCount="2"
                android:columnOrderPreserved="false"
                android:rowCount="2">

                <LinearLayout
                    android:id="@+id/homeDashIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/margin_dash"
                    android:elevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/bgColor"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="@dimen/dash_icon"
                            android:layout_height="@dimen/dash_icon"
                            android:src="@drawable/ic_menu_home" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/righteous"
                            android:textAlignment="center"
                            android:text="@string/menu_home"
                            android:textColor="@color/splashTitleColor"
                            android:textSize="@dimen/dash_titles" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/baseToolsDashIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/margin_dash"
                    android:elevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/white"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="@dimen/dash_icon"
                            android:layout_height="@dimen/dash_icon"
                            android:src="@drawable/ic_menu_toast" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/righteous"
                            android:textAlignment="center"
                            android:text="@string/menu_base_tools"
                            android:textColor="@color/splashTitleColor"
                            android:textSize="@dimen/dash_titles" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/baseViewsElementsDashIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/margin_dash"
                    android:elevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/white"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="@dimen/dash_icon"
                            android:layout_height="@dimen/dash_icon"
                            android:src="@drawable/ic_menu_base_views_elements" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/righteous"
                            android:textAlignment="center"
                            android:text="@string/menu_base_elements"
                            android:textColor="@color/splashTitleColor"
                            android:textSize="@dimen/dash_titles" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutsDashIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/margin_dash"
                    android:elevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/bgColor"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="@dimen/dash_icon"
                            android:layout_height="@dimen/dash_icon"
                            android:src="@drawable/ic_menu_layouts" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/righteous"
                            android:text="@string/menu_layouts"
                            android:textAlignment="center"
                            android:textColor="@color/splashTitleColor"
                            android:textSize="@dimen/dash_titles" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/userInterfacesDashIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/margin_dash"
                    android:elevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/bgColor"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="@dimen/dash_icon"
                            android:layout_height="@dimen/dash_icon"
                            android:src="@drawable/ic_menu_user_interfaces" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/righteous"
                            android:text="@string/menu_user_interfaces"
                            android:textAlignment="center"
                            android:textColor="@color/splashTitleColor"
                            android:textSize="@dimen/dash_titles" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dataDashIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/margin_dash"
                    android:elevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/white"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="@dimen/dash_icon"
                            android:layout_height="@dimen/dash_icon"
                            android:src="@drawable/ic_menu_data" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/righteous"
                            android:text="@string/menu_data"
                            android:textAlignment="center"
                            android:textColor="@color/splashTitleColor"
                            android:textSize="@dimen/dash_titles" />

                    </LinearLayout>

                </LinearLayout>

            </GridLayout>

        </RelativeLayout>

    </ScrollView>

</FrameLayout>